package alertservice.domain.enums;

public enum AlertSeverity {
    INFO,
    WARNING,
    CRITICAL
}
