package alertservice.domain.enums;

public enum AlertSourceType {
    OBSERVATION,
    FORECAST
}
