package alertservice.domain.enums;

public enum AlertStatus {
    OPEN,
    ACKNOWLEDGED,
    RESOLVED
}
